--- a/ConquerToolsKit/ConquerToolsKit/ConquerToolsKit.csproj
+++ b/ConquerToolsKit/ConquerToolsKit/ConquerToolsKit.csproj
@@ -61,6 +61,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ConquerTools.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
