Advanced Mode Working

--- a/ConquerToolsKit/ConquerToolsKit/ConquerToolsKit.csproj
+++ b/ConquerToolsKit/ConquerToolsKit/ConquerToolsKit.csproj
@@ -76,6 +76,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\DatCrypto.EncryptionKey.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
