--- a/ConquerToolsKit/ConquerToolsKit/ConquerToolsKit.csproj
+++ b/ConquerToolsKit/ConquerToolsKit/ConquerToolsKit.csproj
@@ -14,12 +14,13 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DefineConstants>
+    </DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -31,6 +32,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>co.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="CO2_CORE_DLL">
@@ -96,6 +100,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\conquer_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="co.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
